@@ -21,6 +21,11 @@ Features
 
 * Added Linux CPU Stats Decoder and CPU Stats Filter.
 
+* Added a new sandbox encoder, Schema InfluxDB Write Encoder, which updates
+  compatibility of sending data in Heka message fields to InfluxDB 0.9.0+
+  write API.  It is required to use this encoder when integrating Heka with
+  an InfluxDB 0.9.0+ instance as the API to commit metrics has changed.
+
 Bug Handling
 ------------
 
